force-app/main/default/objects/DTTermsJunction__c/DTTermsJunction__c.object-meta.xml
<CustomObject>
    <label>DTTermsJunction</label>
    <nameField>
        <displayFormat>DTJ-{000000}</displayFormat>
        <label>DTTermsJunction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTTermsJunctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>