force-app/main/default/objects/DTTermsJunction__c/fields/Deal_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Deal_Transaction__c</fullName>
    <label>Deal Transaction</label>
    <referenceTo>Deal_Transaction__c</referenceTo>
    <relationshipLabel>DTTermsJunctions</relationshipLabel>
    <relationshipName>DTTermsJunctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>