force-app/main/default/objects/DTTermsJunction__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <formula>IF(INCLUDES(Deal_Transaction__r.Deal__r.deal_type__c , &apos;stay&apos;), &apos;Stay|&apos;,&apos;&apos;) + IF(INCLUDES(Deal_Transaction__r.Deal__r.deal_type__c , &apos;travel&apos;), &apos;Travel|&apos;,&apos;&apos;) + IF(INCLUDES(Deal_Transaction__r.Deal__r.deal_type__c , &apos;Cruise&apos;),&apos;Cruise|&apos; ,&apos;&apos;) + IF(TEXT(Deal_Transaction__r.Deal__r.Dates_Flights__c) =&apos;Dates/Domestic Flights&apos; || TEXT(Deal_Transaction__r.Deal__r.Dates_Flights__c) =&apos;Dates/International Flights&apos;, &apos;Flight|&apos;,&apos;&apos;)</formula>
    <label>Deal Type</label>
    <type>Text</type>
</CustomField>