force-app/main/default/objects/DTTermsJunction__c/fields/Departure_Date_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Date__c</fullName>
    <formula>Deal_Transaction__r.Departure_Date__r.date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date Date</label>
    <type>Date</type>
</CustomField>