force-app/main/default/objects/DTTermsJunction__c/fields/DT_Deal__c.field-meta.xml
<CustomField>
    <fullName>DT_Deal__c</fullName>
    <formula>Deal_Transaction__r.Deal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DT Deal</label>
    <type>Text</type>
</CustomField>