force-app/main/default/objects/DTTermsJunction__c/fields/DT_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>DT_Departure_Date__c</fullName>
    <formula>Deal_Transaction__r.Departure_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DT Departure Date</label>
    <type>Text</type>
</CustomField>