force-app/main/default/objects/DTTermsJunction__c/fields/DTL_Reference_SLE__c.field-meta.xml
<CustomField>
    <fullName>DTL_Reference_SLE__c</fullName>
    <formula>Deal_Transaction__c +&apos;;&apos;+ Merchant_Terms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DTL Reference SLE</label>
    <type>Text</type>
</CustomField>