force-app/main/default/objects/DTTermsJunction__c/fields/Invoiced_DTOLs_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_DTOLs_Cancelled__c</fullName>
    <label>Invoiced DTOLs Cancelled</label>
    <summarizedField>DTOrderLineJunction__c.ff_OL_Gross_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>DTOrderLineJunction__c.ff_Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>DTOrderLineJunction__c.ff_Is_Invoiced__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>DTOrderLineJunction__c.DTTermsJunction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>