force-app/main/default/objects/DTTermsJunction__c/fields/Merchant_Terms__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant Terms</label>
    <referenceTo>Merchant_Terms__c</referenceTo>
    <relationshipLabel>DTTermsJunctions</relationshipLabel>
    <relationshipName>DTTermsJunctions</relationshipName>
    <type>Lookup</type>
</CustomField>