force-app/main/default/objects/DTTermsJunction__c/fields/Mpt_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>Mpt_Payment_Due__c</fullName>
    <formula>TEXT(Merchant_Terms__r.Payment_Due__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mpt Payment Due</label>
    <type>Text</type>
</CustomField>