force-app/main/default/objects/DTTermsJunction__c/fields/Non_Invoiced_DTOLs__c.field-meta.xml
<CustomField>
    <fullName>Non_Invoiced_DTOLs__c</fullName>
    <label>Non Invoiced DTOLs</label>
    <summarizedField>DTOrderLineJunction__c.ff_OL_Gross_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>DTOrderLineJunction__c.ff_Is_Invoiced__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>DTOrderLineJunction__c.ff_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>DTOrderLineJunction__c.DTTermsJunction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>